style(buttons): fix hover and active state for icon-collapse toggle in navigation

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -194,7 +194,7 @@
 					}
 				}
 
-				&:hover:not(:disabled):not(.button-vue--disabled):not(&.modal-container__close) {
+				&:hover:not(:disabled):not(.button-vue--disabled):not(&.modal-container__close):not(.icon-collapse) {
 					background-color: var(--ion-color-blue-b4);
 
 					.button-vue__icon span[role=img]>svg {
@@ -202,7 +202,7 @@
 					}
 				}
 
-				&:active:not(:disabled):not(.button-vue--disabled):not(&.modal-container__close) {
+				&:active:not(:disabled):not(.button-vue--disabled):not(&.modal-container__close):not(.icon-collapse) {
 					background-color: var(--ion-color-primary);
 
 					.button-vue__icon span[role=img]>svg {
